assets/css/main.css
/* ... */
#main select option {
    color: #636363;
    background: #ffffff;
}

#main input[type="checkbox"] + label,
#main input[type="radio"] + label {
    color: #636363;
}

#main input[type="checkbox"] + label:before,
#main input[type="radio"] + label:before {
    background: rgba(222, 222, 222, 0.25);
    border-color: #dddddd;
}

#main input[type="checkbox"]:checked + label:before,
#main input[type="radio"]:checked + label:before {
    background-color: #636363;
    border-color: #636363;
    color: #ffffff;
}

#main input[type="checkbox"]:focus + label:before,
#main input[type="radio"]:focus + label:before {
    border-color: #8cc9f0;
    box-shadow: 0 0 0 1px #8cc9f0;
}

#main ::-webkit-input-placeholder {
    color: rgba(99, 99, 99, 0.25) !important;
}

#main :-moz-placeholder {
    color: rgba(99, 99, 99, 0.25) !important;
}

#main ::-moz-placeholder {
    color: rgba(99, 99, 99, 0.25) !important;
}

#main :-ms-input-placeholder {
    color: rgba(99, 99, 99, 0.25) !important;
}

#main .formerize-placeholder {
    color: rgba(99, 99, 99, 0.25) !important;
}

#main .icon.major {
    border-color: #dddddd;
}

#main .icon.major:before {
    border-color: #dddddd;
}

#main .icon.alt {
    border-color: #dddddd;
    color: #636363;
}

#main .icon.alt:hover {
    background-color: rgba(222, 222, 222, 0.25);
}

#main .icon.alt:active {
    background-color: rgba(222, 222, 222, 0.5);
}

#main ul.alt li {
    border-top-color: #dddddd;
}

#main dl dt {
    color: #636363;
}

#main header.major h2:after {
    background-color: #dddddd;
    background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
    background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
    background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
    background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
}

#main table tbody tr {
    border-color: #dddddd;
}

#main table tbody tr:nth-child(2n + 1) {
    background-color: rgba(222, 222, 222, 0.25);
}

#main table th {
    color: #636363;
}

#main table thead {
    border-bottom-color: #dddddd;
}

#main table tfoot {
    border-top-color: #dddddd;
}

#main table.alt tbody tr td {
    border-color: #dddddd;
}

#main .spotlight .image {
    border-color: #dddddd;
}

#main > .main {
    padding: 5em 5em 3em 5em;
    border-top: solid 1px #dddddd;
}

#main > .main:first-child {
    border-top: 0;
}

#main > .main > .image.main:first-child {
    margin: -5em 0 5em -5em;
    width: calc(100% + 10em);
    border-top-right-radius: 0.25em;
    border-top-left-radius: 0.25em;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

#main > .main > .image.main:first-child img {
    border-top-right-radius: 0.25em;
    border-top-left-radius: 0.25em;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

@media screen and (max-width: 1280px) {

    #main > .main {
        padding: 4em 4em 2em 4em;
    }

    #main > .main > .image.main:first-child {
        margin: -4em 0 4em -4em;
        width: calc(100% + 8em);
    }

}

@media screen and (max-width: 980px) {

    #main > .main {
        padding: 4em 3em 2em 3em;
    }

    #main > .main > .image.main:first-child {
        margin: -4em 0 4em -3em;
        width: calc(100% + 6em);
    }

}

@media screen and (max-width: 736px) {

    #main > .main {
        padding: 3em 2em 1em 2em;
    }

    #main > .main > .image.main:first-child {
        margin: -3em 0 2em -2em;
        width: calc(100% + 4em);
    }

}

@media screen and (max-width: 480px) {

    #main > .main {
        padding: 3em 1.5em 1em 1.5em;
    }

    #main > .main > .image.main:first-child {
        margin: -3em 0 1.5em -1.5em;
        width: calc(100% + 3em);
    }

}

@media screen and (max-width: 360px) {

    #main {
        border-radius: 0;
    }

    #main > .main {
        padding: 2.5em 1em 0.5em 1em;
    }

    #main > .main > .image.main:first-child {
        margin: -2.5em 0 1.5em -1em;
        width: calc(100% + 2em);
        border-radius: 0;
    }

    #main > .main > .image.main:first-child img {
        border-radius: 0;
    }

}

/* Footer */

#footer {
    display: -moz-flex;
    display: -webkit-flex;
    display: -ms-flex;
    display: flex;
    -moz-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: 5em 5em 3em 5em;
    width: calc(100% + 2em);
    margin: 0 0 3em -2em;
}

#footer > * {
    width: calc(50% - 2em);
    margin-left: 2em;
}

#footer .copyright {
    width: 100%;
    margin: 2.5em 0 2em 0;
    font-size: 0.8em;
    text-align: center;
}

@media screen and (max-width: 1280px) {

    #footer {
        padding: 4em 4em 2em 4em;
    }

}

@media screen and (max-width: 980px) {

    #footer {
        padding: 4em 3em 2em 3em;
        display: block;
        margin: 0 0 3em 0;
        width: 100%;
    }

    #footer > * {
        width: 100%;
        margin-left: 0;
        margin-bottom: 3em;
    }

    #footer .copyright {
        text-align: left;
    }

}

@media screen and (max-width: 736px) {

    #footer {
        padding: 3em 2em 1em 2em;
    }

}

@media screen and (max-width: 480px) {

    #footer {
        padding: 3em 1.5em 1em 1.5em;
    }

}

@media screen and (max-width: 480px) {

    #footer {
        padding: 2.5em 1em 0.5em 1em;
    }

}

/* Wrapper */

#wrapper {
    width: 64em;
    max-width: calc(100% - 4em);
    margin: 0 auto;
}

@media screen and (max-width: 480px) {

    #wrapper {
        max-width: calc(100% - 2em);
    }

}

@media screen and (max-width: 360px) {

    #wrapper {
        max-width: 100%;
    }

}

